syntax = "proto3";

package echo;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/lesomnus/grpc-wasm/internal/echo";


service EchoService {
	rpc Unary(Echo) returns (Echo) {};
	rpc ClientStream(stream Echo) returns (Echo) {};
	rpc ServerStream(Echo) returns (stream Echo) {};
	rpc BidiStream(stream Echo) returns (stream Echo) {};
}

message Echo {
	// Server should response with this status.
	Status status = 1;

	string message = 2;
	uint64 sequence = 3;
	
	// Perform a circular shift on themessage
	// to the right by the given number.
	// If the number is negative, shift to the left.
	int64 circular_shift = 4;

	google.protobuf.Timestamp date_created = 15;
}

message Status {
	int32 code = 1;
	string message = 2;
}  
